# test_prj_pd

./: .bumpversion.cfg  .cruft.json  .flake8  .pylintrc  GitVersion.yml  README_DEV.md  invoke.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/dot-files/: .p10k.zsh  .zshrc
.github/workflows/: .github-ci.yml.legacy  cd.yml  ci.yml
references/: README
src_docs/: conf.py  index.rst
src_docs/0.user/: 01-absolute-noob.rst  02-user-guide.rst
src_docs/0.user/additional/: 01-index.rst  glossary.rst  relevant_guidelines.rst
src_docs/0.user/examples/: 01-notebook_setup.rst
src_docs/1.api/: 01-index.rst  version.rst
src_docs/2.develop/: 00-index.rst  01-readme.md  02-version-control.rst  03-devops.rst
tasks/: __init__.py  test.py
test_prj_pd/: test_prj_pd.py  version.py
tests/: conftest.py  test_test_prj_pd.py  test_version.py
